# python-transpose

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  config.py  main.py  pyproject.toml
scripts/: upgrade-2.0.py  upgrade-2.2.py
src/transpose/: __init__.py  console.py  transpose.py  utils.py
tests/: test_console.py  test_project.py  test_transpose.py  test_utils.py  utils.py
transpose/: __init__.py  console.py  exceptions.py  logger.py  transpose.py  utils.py
