[tool.poetry]
name = "transpose"
version = "0.9.0"
description = "Move and symlink a path"
authors = ["Ryan Reed"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "*"
python-dotenv = "*"

[tool.poetry.dev-dependencies]
black = "==22.6"
flake8 = "==3.8.4"
pre-commit = "*"
pytest = "*"
pytest-sugar = "*"

[tool.poetry.scripts]
transpose = "transpose.console:entry_point"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
