[tool.poetry]
name = "transpose"
version = "0.9.0"
description = "Move and symlink a path"
authors = ["Ryan Reed"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "==22.6"
flake8 = "==3.8.4"
pre-commit = "*"
python-dotenv = "*"
pytest = "*"
pytest-sugar = "*"

[tool.poetry.scripts]
transpose = "transpose.console:entry_point"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
