[tool.poetry]
name = "transpose"
version = "1.0.2"
description = "Move and symlink a path"
authors = ["Ryan Reed"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "==22.6"
flake8 = "==3.8.4"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-sugar = "*"
python-dotenv = "*"

[tool.poetry.scripts]
transpose = "transpose.console:entry_point"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "master"
build_command = "pip install poetry && poetry build"
dist_path = "dist/"
upload_to_pypi = false
remove_dist = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
